--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
         --grease-white: #ffffff;
         --bg-color: #f4f4f9;
     }
+
     body {
         font-family: 'Arial Black', Gadget, sans-serif;
         background-color: var(--bg-color);
@@ -22,21 +23,20 @@
         min-height: 100vh;
         color: var(--grease-black);
     }
+
     .main-container {
         width: 90%;
         max-width: 1000px;
         text-align: center;
         padding: 20px 0;
     }
+
     .container {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
         gap: 15px;
     }
-    @media (max-width: 600px) {
-        .logo-text { font-size: 2.5rem !important; }
-        .card { padding: 25px 15px !important; }
-    }
+
     .logo-container {
         margin-bottom: 30px;
         background-color: var(--grease-red);
@@ -45,12 +45,14 @@
         display: inline-block;
         transform: rotate(-2deg);
     }
+
     .logo-text {
         font-size: 4rem;
         color: var(--grease-white);
         text-shadow: 2px 2px 0 var(--grease-black);
         margin: 0;
     }
+
     .card {
         background: var(--grease-white);
         padding: 40px 20px;
@@ -61,19 +63,19 @@
         transition: transform 0.25s ease, box-shadow 0.25s ease, border-color 0.25s ease;
         font-size: 1.3rem;
     }
+
     .card i {
         font-size: 2.5rem;
         margin-bottom: 10px;
         color: var(--grease-red);
         transition: color 0.25s ease;
     }
+
     .card:hover {
         transform: translateY(-6px) scale(1.03);
         box-shadow: 0 8px 20px rgba(0,0,0,0.25);
         border-color: var(--grease-red);
     }
-    .card:hover i { color: var(--grease-black); }
-    .card:active { transform: scale(0.95); }
 
     .overlay {
         position: fixed;
@@ -84,7 +86,9 @@
         display: none;
         flex-direction: column;
     }
+
     .overlay.active { display: flex; }
+
     .popup-header {
         padding: 10px 20px;
         display: flex;
@@ -93,6 +97,7 @@
         background: var(--grease-black);
         color: var(--grease-white);
     }
+
     .close-btn {
         font-size: 35px;
         background: none;
@@ -100,49 +105,44 @@
         color: var(--grease-red);
         cursor: pointer;
     }
+
     .iframe-container {
         flex-grow: 1;
         position: relative;
-        -webkit-overflow-scrolling: touch;
         overflow-y: auto;
     }
-    iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
-    }
-    .loader {
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translate(-50%, -50%);
-        width: 40px; height: 40px;
-        border: 4px solid #f3f3f3;
-        border-top: 4px solid var(--grease-red);
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-    }
-    @keyframes spin { 100% { transform: translate(-50%, -50%) rotate(360deg); } }
-    .loaded .loader { display: none; }
 
-    .announcements-list { padding: 20px; }
-    .announcement-item {
-        border-bottom: 1px solid #ddd;
-        padding: 10px 0;
-        text-align: left;
+    /* Calendar styling */
+    .calendar-list {
+        padding: 20px;
     }
-    .announcement-title {
-        font-size: 1.3rem;
+
+    .calendar-day {
+        background: #ffffff;
+        border: 3px solid #2a2a2a;
+        border-radius: 12px;
+        padding: 15px;
+        margin-bottom: 15px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+
+    .calendar-date {
+        font-size: 1.4rem;
         font-weight: bold;
+        color: #da291c;
         margin-bottom: 8px;
     }
-    .announcement-field {
+
+    .calendar-field {
         margin: 4px 0;
-        font-size: 0.95rem;
+        font-size: 1rem;
     }
-    .announcement-field strong {
+
+    .calendar-field strong {
         font-weight: bold;
     }
 
+    /* Toast */
     .toast {
         position: fixed;
         bottom: 20px;
@@ -160,6 +160,7 @@
 </head>
 
 <body>
+
 <div class="main-container">
     <div class="logo-container">
         <h1 class="logo-text">GREASE</h1>
@@ -169,64 +170,58 @@
         <div class="card" onclick="openPopup('scriptPopup')">
             <i class="fa-solid fa-book-open"></i><br>Script
         </div>
+
         <div class="card" onclick="openPopup('schedulePopup')">
             <i class="fa-solid fa-calendar-days"></i><br>Rehearsal Schedule
         </div>
+
         <div class="card" onclick="openPopup('videosPopup')">
             <i class="fa-solid fa-film"></i><br>Dance Videos
         </div>
-        <div class="card" onclick="openPopup('announcementsPopup')">
-            <i class="fa-solid fa-bullhorn"></i><br>Announcements
+
+        <div class="card">
+            <i class="fa-solid fa-bullhorn"></i><br>Announcements<br><small>(coming soon)</small>
         </div>
     </div>
 </div>
 
+<!-- POPUP: SCRIPT -->
 <div id="scriptPopup" class="overlay">
     <div class="popup-header">
         <h2>Script</h2>
         <button class="close-btn" onclick="closePopup('scriptPopup')">&times;</button>
     </div>
     <div class="iframe-container">
-        <div class="loader"></div>
-        <iframe src="https://example.com" onload="hideLoader(this)"></iframe>
+        <iframe src="https://example.com"></iframe>
     </div>
 </div>
 
+<!-- POPUP: REHEARSAL SCHEDULE (Calendar) -->
 <div id="schedulePopup" class="overlay">
     <div class="popup-header">
         <h2>Rehearsal Schedule</h2>
         <button class="close-btn" onclick="closePopup('schedulePopup')">&times;</button>
     </div>
+
     <div class="iframe-container">
-        <div class="loader"></div>
-        <iframe src="about:blank" onload="hideLoader(this)"></iframe>
+        <div class="calendar-list" id="calendarList">
+            <p>Loading...</p>
+        </div>
     </div>
 </div>
 
+<!-- POPUP: VIDEOS -->
 <div id="videosPopup" class="overlay">
     <div class="popup-header">
         <h2>Dance Videos</h2>
         <button class="close-btn" onclick="closePopup('videosPopup')">&times;</button>
     </div>
     <div class="iframe-container">
-        <div class="loader"></div>
-        <iframe src="about:blank" onload="hideLoader(this)"></iframe>
+        <iframe src="about:blank"></iframe>
     </div>
 </div>
 
-<div id="announcementsPopup" class="overlay">
-    <div class="popup-header">
-        <h2>Announcements</h2>
-        <button class="close-btn" onclick="closePopup('announcementsPopup')">&times;</button>
-    </div>
-    <div class="iframe-container loaded">
-        <div class="announcements-list" id="announcementsList">
-            <p>Loading announcements...</p>
-        </div>
-    </div>
-</div>
-
-<div class="toast" id="toast">New cast announcement</div>
+<div class="toast" id="toast">New rehearsal added</div>
 
 <script>
 function openPopup(id) {
@@ -234,9 +229,6 @@ function openPopup(id) {
 }
 function closePopup(id) {
     document.getElementById(id).classList.remove("active");
-}
-function hideLoader(iframe) {
-    iframe.parentElement.classList.add("loaded");
 }
 function showToast() {
     const toast = document.getElementById('toast');
@@ -247,7 +239,6 @@ function showToast() {
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-analytics.js";
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-auth.js";
     import { 
         getFirestore, collection, onSnapshot, query, orderBy 
@@ -264,7 +255,6 @@ function showToast() {
     };
 
     const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
@@ -272,7 +262,7 @@ function showToast() {
         if (!user) window.location.href = "index.html";
     });
 
-    const announcementsList = document.getElementById('announcementsList');
+    const calendarList = document.getElementById('calendarList');
     let firstLoad = true;
 
     const q = query(
@@ -281,30 +271,35 @@ function showToast() {
     );
 
     onSnapshot(q, snapshot => {
-        announcementsList.innerHTML = "";
+        calendarList.innerHTML = "";
 
-        if (snapshot.empty) {
-            announcementsList.innerHTML = "<p>No announcements yet.</p>";
-        } else {
-            snapshot.forEach(doc => {
-                const data = doc.data();
-                const item = document.createElement('div');
-                item.className = 'announcement-item';
+        const today = new Date();
+        today.setHours(0,0,0,0);
 
-                item.innerHTML = `
-                    <div class="announcement-title">${data.title || ""}</div>
-                    <div class="announcement-field"><strong>Date:</strong> ${data.date || ""}</div>
-                    <div class="announcement-field"><strong>Time:</strong> ${data.time || ""}</div>
-                    <div class="announcement-field"><strong>Who is needed:</strong> ${data.who || ""}</div>
-                    ${data.extra ? `<div class="announcement-field"><strong>Extra info:</strong> ${data.extra}</div>` : ""}
-                `;
-                announcementsList.appendChild(item);
-            });
-        }
+        snapshot.forEach(doc => {
+            const data = doc.data();
+            const eventDate = new Date(data.sortTimestamp);
+
+            if (eventDate < today) return;
+
+            const item = document.createElement('div');
+            item.className = 'calendar-day';
+
+            item.innerHTML = `
+                <div class="calendar-date">${data.date}</div>
+                <div class="calendar-field"><strong>Title:</strong> ${data.title}</div>
+                <div class="calendar-field"><strong>Time:</strong> ${data.time}</div>
+                <div class="calendar-field"><strong>Who:</strong> ${data.who}</div>
+                ${data.extra ? `<div class="calendar-field"><strong>Extra:</strong> ${data.extra}</div>` : ""}
+            `;
+
+            calendarList.appendChild(item);
+        });
 
         if (!firstLoad) showToast();
         firstLoad = false;
     });
 </script>
+
 </body>
 </html>
